--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '3'
+
 services:
-  jekyll-serve:
-    image: jekyll/jekyll:4.0
-    volumes: 
-      - './srv/jekyll'
+  jekyll:
+    image: jekyll/jekyll:latest
+    command: jekyll serve --watch --force_polling --verbose
     ports:
-      - 4000:4000
-    command: 'jekyll serve'
+      - 80:4000
+    volumes:
+      - .:/srv/jekyll
