--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3'
 services:
   jekyll:
     image: jekyll/jekyll:latest
-    command: jekyll serve --watch --force_polling --verbose
+    command: jekyll serve --watch --force_polling --verbose --port 80 --host 0.0.0.0
     ports:
-      - 80:4000
+      - "80:80"
     volumes:
       - .:/srv/jekyll
